--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+p{
+  margin: 0 !important;
+}
+.title{
+  font-size: 1.8rem !important;
+}
+.sub-title{
+  font-size: 1.4rem !important;
+  
+}
